# VN-legal-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: __init__.py  auth.py  config.py  coverage.py  database.py  decision_audit.py  knowledge.py  legal_ai.py  main.py  models.py  service.py
app/static/: app.js  index.html  styles.css
corpus/land/: acquisition-catalog.json  acquisition-status.json  manifest-catalog.json  package-registry.json  source-inventory.json
data/evaluation/: pilot_scenarios.json
docs/architecture/: mvp-architecture.md  system-boundary.md
docs/decisions/: 0001-new-product-repository.md  0002-agent-service-boundary.md
docs/evaluation/: pilot-readiness-report.md
docs/operations/: pilot-runbook.md
scripts/: acquire_official_sources.py  acquisition_status.py  activate_corpus.py  audit_pdf_structure.py  bootstrap_source_packs.py  build_full_text_pack.py  build_release_archive.py  configure_ai.py  configure_gemini.py  configure_providers.py  corpus_coverage.py  create_api_key.py  evaluate_pilot.py  import_source_pack.py  normalize_corpus_text_hashes.py  promote_verified_pack.py  record_visual_qa.py  release_gate.py  scaffold_source_manifests.py  verify_source_pack.py
tests/: conftest.py  test_configuration_scripts.py  test_corpus_coverage.py  test_corpus_import.py  test_database_integrity.py  test_decision_audit.py  test_legal_ai.py  test_official_source_acquisition.py  test_security_knowledge.py  test_source_pack_verification.py  test_workflow.py
(+299 files in other folders)
