[project]
name = "minhlong-legal-agent"
version = "0.1.0"
description = "Auditable Vietnamese legal decision-support MVP"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115,<1", "uvicorn>=0.30,<1", "pydantic>=2.7,<3"]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "httpx>=0.27,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

